--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("images/nature.jpg");
+  background-image: url("images/new.jpg");
   background-size: cover;
   font-family: "Prociono", serif;
   font-weight: bold;
